@startuml DiagramaClasesStyleStore
title Diagrama de Clases — StyleStore

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam backgroundColor #FAFAFA
skinparam class {
    BackgroundColor #E8F4FD
    BorderColor #2471A3
    ArrowColor #1A5276
    HeaderBackgroundColor #2471A3
    HeaderFontColor white
}

' ========================
' CLASES ABSTRACTAS / BASE
' ========================

abstract class Usuario {
    - id : String
    - nombre : String
    - email : String
    - password : String
    + getId() : String
    + getNombre() : String
    + getEmail() : String
    + getPassword() : String
    + setNombre(nombre : String) : void
    + setEmail(email : String) : void
    + setPassword(password : String) : void
    + {abstract} getRol() : String
    + toString() : String
}

abstract class Producto {
    - id : String
    - nombre : String
    - descripcion : String
    - precio : double
    - stock : int
    - categoria : String
    - marca : String
    + getId() : String
    + getNombre() : String
    + getPrecio() : double
    + getStock() : int
    + getMarca() : String
    + getCategoria() : String
    + setPrecio(precio : double) : void
    + setStock(stock : int) : void
    + reducirStock(cantidad : int) : void
    + hayStock(cantidad : int) : boolean
    + {abstract} getTipoProducto() : String
    + {abstract} getDetallesEspecificos() : String
    + toString() : String
}

abstract class Pago {
    - monto : double
    - fecha : String
    + getMonto() : double
    + getFecha() : String
    + {abstract} procesarPago() : String
    + {abstract} getTipoPago() : String
    + toString() : String
}

' ========================
' SUBCLASES DE USUARIO
' ========================

class Cliente {
    - direccion : String
    - telefono : String
    - historialPedidos : ArrayList<Pedido>
    + getRol() : String
    + agregarPedido(pedido : Pedido) : void
    + getHistorialPedidos() : ArrayList<Pedido>
    + getDireccion() : String
    + getTelefono() : String
    + toString() : String
}

class Administrador {
    - codigoAdmin : String
    + getRol() : String
    + getCodigoAdmin() : String
    + toString() : String
}

' ========================
' SUBCLASES DE PRODUCTO
' ========================

class Ropa {
    - talla : String
    - color : String
    - material : String
    - genero : String
    + getTipoProducto() : String
    + getDetallesEspecificos() : String
    + getTalla() : String
    + getColor() : String
    + getMaterial() : String
    + getGenero() : String
}

class Calzado {
    - numeracion : int
    - color : String
    - material : String
    - genero : String
    + getTipoProducto() : String
    + getDetallesEspecificos() : String
    + getNumeracion() : int
    + getColor() : String
    + getMaterial() : String
    + getGenero() : String
}

class Accesorio {
    - tipo : String
    - color : String
    - material : String
    - dimensiones : String
    + getTipoProducto() : String
    + getDetallesEspecificos() : String
    + getTipo() : String
    + getColor() : String
    + getMaterial() : String
    + getDimensiones() : String
}

' ========================
' SUBCLASES DE PAGO
' ========================

class PagoTarjeta {
    - numeroTarjeta : String
    - nombreTitular : String
    - tipoTarjeta : String
    + procesarPago() : String
    + getTipoPago() : String
    + getNumeroTarjeta() : String
    + getNombreTitular() : String
    + getTipoTarjeta() : String
}

class PagoEfectivo {
    - montoEntregado : double
    + procesarPago() : String
    + getTipoPago() : String
    + getMontoEntregado() : double
    + getCambio() : double
}

class PagoTransferencia {
    - banco : String
    - numeroReferencia : String
    + procesarPago() : String
    + getTipoPago() : String
    + getBanco() : String
    + getNumeroReferencia() : String
}

' ========================
' CLASES DE NEGOCIO
' ========================

class Carrito {
    - items : ArrayList<ItemCarrito>
    + agregarProducto(producto : Producto, cantidad : int) : void
    + eliminarProducto(productoId : String) : void
    + actualizarCantidad(productoId : String, nuevaCantidad : int) : void
    + getTotal() : double
    + vaciar() : void
    + estaVacio() : boolean
    + getItems() : ArrayList<ItemCarrito>
    + getTotalProductos() : int
}

class ItemCarrito {
    - producto : Producto
    - cantidad : int
    + getSubtotal() : double
    + getProducto() : Producto
    + getCantidad() : int
    + setCantidad(cantidad : int) : void
    + toString() : String
}

class Pedido {
    - id : String
    - clienteId : String
    - clienteNombre : String
    - items : ArrayList<ItemCarrito>
    - total : double
    - estado : EstadoPedido
    - fecha : String
    - direccionEntrega : String
    + getId() : String
    + getTotal() : double
    + getEstado() : EstadoPedido
    + setEstado(estado : EstadoPedido) : void
    + getPago() : Pago
    + getResumen() : String
    + toString() : String
}

enum EstadoPedido {
    PENDIENTE
    CONFIRMADO
    EN_CAMINO
    ENTREGADO
    CANCELADO
}

' ========================
' CAPA DE DATOS
' ========================

class Tienda {
    - productos : ArrayList<Producto>
    - usuarios : ArrayList<Usuario>
    - pedidos : ArrayList<Pedido>
    - sesionActual : Usuario
    - carritoActual : Carrito
    + iniciarSesion(email : String, password : String) : Usuario
    + cerrarSesion() : void
    + registrarCliente(...) : Cliente
    + buscarProductos(texto : String) : ArrayList<Producto>
    + agregarAlCarrito(productoId : String, cantidad : int) : void
    + confirmarCompra(pago : Pago, direccion : String) : Pedido
    + agregarProducto(producto : Producto) : void
    + eliminarProducto(id : String) : void
    + getPedidos() : ArrayList<Pedido>
    + getProductos() : ArrayList<Producto>
}

class GestorDatos {
    - ARCHIVO_PRODUCTOS : String
    - ARCHIVO_USUARIOS : String
    - ARCHIVO_PEDIDOS : String
    + {static} guardarProductos(productos : ArrayList<Producto>) : void
    + {static} cargarProductos() : ArrayList<Producto>
    + {static} guardarUsuarios(usuarios : ArrayList<Usuario>) : void
    + {static} cargarUsuarios() : ArrayList<Usuario>
    + {static} guardarPedidos(pedidos : ArrayList<Pedido>) : void
    + {static} cargarPedidos() : ArrayList<Pedido>
}

' ========================
' EXCEPCIONES
' ========================

class StockInsuficienteException {
    + StockInsuficienteException(mensaje : String)
}

class ProductoNoEncontradoException {
    + ProductoNoEncontradoException(mensaje : String)
}

class AutenticacionException {
    + AutenticacionException(mensaje : String)
}

Exception <|-- StockInsuficienteException
Exception <|-- ProductoNoEncontradoException
Exception <|-- AutenticacionException

' ========================
' RELACIONES HERENCIA
' ========================

Usuario <|-- Cliente
Usuario <|-- Administrador

Producto <|-- Ropa
Producto <|-- Calzado
Producto <|-- Accesorio

Pago <|-- PagoTarjeta
Pago <|-- PagoEfectivo
Pago <|-- PagoTransferencia

' ========================
' RELACIONES COMPOSICIÓN / ASOCIACIÓN
' ========================

Carrito "1" *-- "0..*" ItemCarrito : contiene
ItemCarrito "1" --> "1" Producto : referencia

Pedido "1" *-- "1..*" ItemCarrito : incluye
Pedido "1" --> "1" Pago : usa
Pedido "1" --> "1" EstadoPedido : tiene

Cliente "1" *-- "0..*" Pedido : historial
Cliente "1" *-- "1" Carrito : tiene

Tienda "1" o-- "0..*" Producto : gestiona
Tienda "1" o-- "0..*" Usuario : gestiona
Tienda "1" o-- "0..*" Pedido : registra
Tienda ..> GestorDatos : usa
Tienda ..> StockInsuficienteException : lanza
Tienda ..> ProductoNoEncontradoException : lanza
Tienda ..> AutenticacionException : lanza

@enduml
